crates/aven-check/tests/fixtures/check/invalid/open-variant-non-exhaustive.av
source : @{@A, ..} = value
result = source ?>
  @A => 1
